tests/build/cases/widget/capture_auto_remove.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `foo`
  --> $DIR/capture_auto_remove.rs:33:9
   |
33 |         foo = true;
   |         ^^^ use of undeclared crate or module `foo`
